deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: o2bionics-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: o2bionics-web
  template:
    metadata:
      labels:
        app: o2bionics-web
    spec:
      containers:
        - name: o2bionics-web
          image: denisprokhorchik/o2bionics:v1.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
              protocol: TCP
