deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: o2bionics-web-svc
spec:
  selector:
    app: o2bionics-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      # nodePort: 32001
